Fix show by filter endpoint and range price seeder.
